--- a/app/src/main/res/layout/order_summary_card.xml
+++ b/app/src/main/res/layout/order_summary_card.xml
@@ -17,6 +17,14 @@
         card_view:cardCornerRadius="0dp"
         card_view:cardElevation="3dp" >
 
+        <ProgressBar
+            android:id="@+id/call_progress"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:visibility="gone" />
+
         <!-- A CardView that contains a TextView -->
         <android.support.v7.widget.CardView
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
