--- a/app/src/main/res/layout/order_summary.xml
+++ b/app/src/main/res/layout/order_summary.xml
@@ -45,6 +45,7 @@
         android:text="#1010101"
         android:textSize="@dimen/summary_size"
         android:gravity="center"
+        android:paddingTop="8dp"
         android:paddingLeft="8dp"
         />
     <TextView
@@ -54,9 +55,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="200.00"
+        android:textStyle="bold"
         android:textColor="@color/style_color_primary"
         android:textSize="@dimen/summary_size"
         android:gravity="center"
+        android:paddingTop="8dp"
         android:paddingRight="8dp"
         />
     <TextView
@@ -66,6 +69,7 @@
         android:text="Time for delivery"
         android:textSize="@dimen/summary_size"
         android:gravity="center"
+        android:paddingTop="8dp"
         android:paddingLeft="8dp"
         />
     <TextView
@@ -78,6 +82,7 @@
         android:textColor="@color/style_color_primary"
         android:textSize="@dimen/summary_size"
         android:gravity="center"
+        android:paddingTop="8dp"
         android:paddingRight="8dp"
         />
     <TextView
@@ -101,6 +106,7 @@
         android:textSize="@dimen/summary_size"
         android:gravity="center"
         android:paddingLeft="8dp"
+        android:paddingTop="8dp"
         />
 
     <Button
@@ -110,6 +116,7 @@
         android:layout_alignBaseline="@id/address"
         android:text="Navigate"
         android:layout_alignParentRight="true"
+        android:paddingTop="8dp"
         android:paddingRight="8dp" />
 
     <RelativeLayout
@@ -117,14 +124,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/address"
+        android:paddingTop="8dp"
         android:layout_marginTop="16dp">
         <Button
             android:id="@+id/checkin_button"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_marginLeft="8dp"
-            android:layout_alignParentRight="true"
             android:paddingLeft="8dp"
+            android:layout_centerHorizontal="true"
             android:text="Check IN"
             android:textColor="@color/white"
             android:paddingRight="8dp"
@@ -148,7 +156,7 @@
             android:text="Card Payment"
             android:textColor="@color/white"
             android:paddingRight="8dp"
-            android:background="@drawable/button_background"
+            android:background="@drawable/button1_background"
             />
         <Button
             android:id="@+id/cash_payment_button"
@@ -160,7 +168,7 @@
             android:text="Cash Paymnet"
             android:paddingRight="8dp"
             android:textColor="@color/white"
-            android:background="@drawable/button_background"
+            android:background="@drawable/button1_background"
         />
     </RelativeLayout>
 </RelativeLayout>
