--- a/app/src/main/res/layout/order_summary_card.xml
+++ b/app/src/main/res/layout/order_summary_card.xml
@@ -17,15 +17,6 @@
         card_view:cardCornerRadius="0dp"
         card_view:cardElevation="3dp" >
 
-        <ProgressBar
-            android:id="@+id/call_progress"
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:visibility="gone" />
-
-        <!-- A CardView that contains a TextView -->
         <android.support.v7.widget.CardView
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/order_summary_card"
@@ -34,6 +25,16 @@
             android:layout_height="wrap_content"
             android:clickable="true">
 
+            <ProgressBar
+                android:id="@+id/call_progress"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_gravity="center"
+                android:visibility="gone" />
+
+            <!-- A CardView that contains a TextView -->
             <include layout="@layout/order_summary"/>
         </android.support.v7.widget.CardView>
     </android.support.v7.widget.CardView>
