--- a/app/src/main/res/layout/order_summary_card.xml
+++ b/app/src/main/res/layout/order_summary_card.xml
@@ -14,8 +14,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginLeft="8dp"
         card_view:cardBackgroundColor="@android:color/transparent"
-        card_view:cardCornerRadius="0dp"
-        card_view:cardElevation="3dp" >
+        card_view:cardCornerRadius="0dp">
 
         <android.support.v7.widget.CardView
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
