--- a/app/src/main/res/layout/order_detail.xml
+++ b/app/src/main/res/layout/order_detail.xml
@@ -1,33 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v4.widget.SwipeRefreshLayout
-    android:id="@+id/activity_main_swipe_refresh_layout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/order_detail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginRight="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/card_background">
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="asdf"/>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/detail_recycler_view"
-            android:scrollbars="vertical"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            xmlns:android="http://schemas.android.com/apk/res/android" />
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:id="@+id/order_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/customer_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Naresh Kumar"
+                    android:textSize="@dimen/customer_name_size"
+                    />
+                <TextView
+                    android:id="@+id/order_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="#1010101"
+                    android:textSize="@dimen/summary_size"
+                    android:layout_below="@+id/customer_name"
+                    android:layout_alignStart="@+id/customer_name"/>
+                <Button
+                    android:id="@+id/call_button"
+                    android:layout_height="40dp"
+                    android:layout_width="wrap_content"
+                    android:text="Call"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true"/>
+            </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="qwer"/>
+            <View
+                android:id="@+id/divider"
+                android:layout_width="match_parent"
+                android:layout_below="@+id/order_user"
+                android:layout_height="1dp"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/darker_gray"/>
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/total"
+                android:layout_below="@+id/divider"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Total"
+                android:textStyle="bold"
+                android:textSize="@dimen/summary_size"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="8dp"
+                />
+            <TextView
+                android:id="@+id/cart_price"
+                android:layout_below="@+id/divider"
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="200.00"
+                android:textStyle="bold"
+                android:textColor="@color/style_color_primary"
+                android:textSize="@dimen/summary_size"
+                android:layout_marginTop="16dp"
+                />
+            <TextView
+                android:id="@+id/delivery_time_text"
+                android:layout_below="@+id/cart_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Delivery"
+                android:textSize="@dimen/summary_size"
+                android:layout_marginTop="16dp"
+                />
+            <TextView
+                android:id="@+id/delivery_time"
+                android:layout_below="@+id/cart_price"
+                android:layout_alignParentEnd="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="25 Minutes"
+                android:textColor="@color/style_color_primary"
+                android:textSize="@dimen/summary_size"
+                android:layout_marginTop="16dp"
+                />
 
-</android.support.v4.widget.SwipeRefreshLayout>
+            <TextView
+                android:id="@+id/address"
+                android:layout_below="@+id/delivery_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Address"
+                android:textSize="@dimen/summary_size"
+                android:layout_marginTop="16dp"
+                />
+
+            <Button
+                android:id="@+id/navigate_button"
+                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:layout_alignBaseline="@id/address"
+                android:text="Navigate"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="16dp"
+                />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/detail_recycler_view"
+                android:scrollbars="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/address"
+                xmlns:android="http://schemas.android.com/apk/res/android" />
+
+            <RelativeLayout
+                android:id="@+id/done_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/detail_recycler_view"
+                android:layout_marginTop="16dp"
+                android:paddingBottom="8dp"
+                >
+                <Button
+                    android:id="@+id/card_payment_button"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:text="Card"
+                    android:textColor="@color/white"
+                    android:background="@drawable/button1_background"
+                    />
+                <Button
+                    android:id="@+id/cash_payment_button"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:text="Cash"
+                    android:textColor="@color/white"
+                    android:background="@drawable/button1_background"
+                    />
+            </RelativeLayout>
+        </RelativeLayout>
+    </ScrollView>
+
+</LinearLayout>
