1. Integrated ezetap 2. moves location services to base activity 3. card / cash button now only visible in detail list

--- a/app/src/main/res/layout/order_detail.xml
+++ b/app/src/main/res/layout/order_detail.xml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/order_detail"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginRight="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/card_background">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/order_detail_layout"
+    android:layout_width="match_parent"
+    android:layout_height="fill_parent"
+    android:layout_marginRight="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
+    android:orientation="vertical"
+    >
     <ScrollView
+        android:id="@+id/order_detail_layout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp">
-        <RelativeLayout
+        android:layout_marginEnd="8dp"
+        android:fillViewport="true"
+        >
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
             <RelativeLayout
                 android:id="@+id/order_user"
                 android:layout_width="match_parent"
@@ -47,90 +54,88 @@
             <View
                 android:id="@+id/divider"
                 android:layout_width="match_parent"
-                android:layout_below="@+id/order_user"
                 android:layout_height="1dp"
                 android:layout_marginTop="8dp"
                 android:background="@android:color/darker_gray"/>
 
-            <TextView
-                android:id="@+id/total"
-                android:layout_below="@+id/divider"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Total"
-                android:textStyle="bold"
-                android:textSize="@dimen/summary_size"
-                android:layout_marginTop="16dp"
-                android:layout_marginRight="8dp"
-                />
-            <TextView
-                android:id="@+id/cart_price"
-                android:layout_below="@+id/divider"
-                android:layout_alignParentRight="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="200.00"
-                android:textStyle="bold"
-                android:textColor="@color/style_color_primary"
-                android:textSize="@dimen/summary_size"
-                android:layout_marginTop="16dp"
-                />
-            <TextView
-                android:id="@+id/delivery_time_text"
-                android:layout_below="@+id/cart_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Delivery"
-                android:textSize="@dimen/summary_size"
-                android:layout_marginTop="16dp"
-                />
-            <TextView
-                android:id="@+id/delivery_time"
-                android:layout_below="@+id/cart_price"
-                android:layout_alignParentEnd="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="25 Minutes"
-                android:textColor="@color/style_color_primary"
-                android:textSize="@dimen/summary_size"
-                android:layout_marginTop="16dp"
-                />
+                android:orientation="horizontal"
+                >
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_weight="1"
+                    >
+                    <TextView
+                        android:id="@+id/address"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Address"
+                        android:textSize="@dimen/summary_size"
+                        android:layout_marginTop="16dp"
+                        />
 
-            <TextView
-                android:id="@+id/address"
-                android:layout_below="@+id/delivery_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Address"
-                android:textSize="@dimen/summary_size"
-                android:layout_marginTop="16dp"
-                />
+                    <Button
+                        android:id="@+id/navigate_button"
+                        android:layout_height="40dp"
+                        android:layout_width="wrap_content"
+                        android:text="Navigate"
+                        android:layout_marginTop="16dp"
+                        />
+                </LinearLayout>
 
-            <Button
-                android:id="@+id/navigate_button"
-                android:layout_height="40dp"
-                android:layout_width="wrap_content"
-                android:layout_alignBaseline="@id/address"
-                android:text="Navigate"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="16dp"
-                />
+                <View
+                    android:id="@+id/divider2"
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="8dp"
+                    android:background="@android:color/darker_gray"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/cart_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="200.00"
+                        android:textStyle="bold"
+                        android:textColor="@color/style_color_primary"
+                        android:textSize="@dimen/summary_size"
+                        android:layout_marginTop="16dp"
+                        />
+
+                    <TextView
+                        android:id="@+id/delivery_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="25 Minutes"
+                        android:textColor="@color/style_color_primary"
+                        android:textSize="@dimen/summary_size"
+                        android:layout_marginTop="16dp"
+                        />
+                </LinearLayout>
+
+            </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/detail_recycler_view"
                 android:scrollbars="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/address"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 xmlns:android="http://schemas.android.com/apk/res/android" />
 
-            <RelativeLayout
-                android:id="@+id/done_layout"
+            <LinearLayout
+                android:id="@+id/cardcash_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/detail_recycler_view"
-                android:layout_marginTop="16dp"
-                android:paddingBottom="8dp"
+                android:orientation="horizontal"
                 >
                 <Button
                     android:id="@+id/card_payment_button"
@@ -138,7 +143,9 @@
                     android:layout_width="wrap_content"
                     android:text="Card"
                     android:textColor="@color/white"
+                    android:layout_weight="1"
                     android:background="@drawable/button1_background"
+                    android:visibility="visible"
                     />
                 <Button
                     android:id="@+id/cash_payment_button"
@@ -147,10 +154,22 @@
                     android:layout_alignParentRight="true"
                     android:text="Cash"
                     android:textColor="@color/white"
-                    android:background="@drawable/button1_background"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_background"
+                    android:visibility="visible"
                     />
-            </RelativeLayout>
-        </RelativeLayout>
+                <Button
+                    android:id="@+id/paid_button"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:text="Paid"
+                    android:textColor="@color/white"
+                    android:layout_weight="1"
+                    android:background="@drawable/button1_background"
+                    android:visibility="gone"
+                    android:clickable="false"
+                    />
+            </LinearLayout>
+        </LinearLayout>
     </ScrollView>
-
-</LinearLayout>
+ </LinearLayout>
