--- a/app/src/main/res/layout/item_detail.xml
+++ b/app/src/main/res/layout/item_detail.xml
@@ -1,20 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="40dp"
+    android:layout_margin="6dp"
+    android:orientation="horizontal">
+
+    <Button
+        android:id="@+id/item_quantity"
+        android:background="@drawable/food_item_count_back"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:textSize="@dimen/normal"
+        android:layout_gravity="center"
+        android:clickable="false"
+        android:textColor="@color/white"
+        android:text="9"/>
 
     <TextView
         android:id="@+id/item_name"
-        android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="10dp"
+        android:maxLines="2"
+        android:textSize="@dimen/normal"
         android:text="asdf"/>
 
-    <TextView
-        android:id="@+id/item_quantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="qwer"/>
-
-</RelativeLayout>
+</LinearLayout>
