--- a/app/src/main/res/layout/order_detail.xml
+++ b/app/src/main/res/layout/order_detail.xml
@@ -4,143 +4,61 @@
     android:id="@+id/order_detail_layout"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
-    android:layout_marginRight="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
+    android:layout_margin="8dp"
     android:orientation="vertical"
     >
     <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/order_detail_layout1"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:fillViewport="true"
         >
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
-            <RelativeLayout
-                android:id="@+id/order_user"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/customer_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Naresh Kumar"
-                    android:textSize="@dimen/customer_name_size"
-                    />
-                <TextView
-                    android:id="@+id/order_id"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="#1010101"
-                    android:textSize="@dimen/summary_size"
-                    android:layout_below="@+id/customer_name"
-                    android:layout_alignStart="@+id/customer_name"/>
-                <Button
-                    android:id="@+id/call_button"
-                    android:layout_height="40dp"
-                    android:layout_width="wrap_content"
-                    android:text="Call"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentEnd="true"/>
-            </RelativeLayout>
-
-            <View
-                android:id="@+id/divider"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="8dp"
-                android:background="@android:color/darker_gray"/>
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 >
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                <include
+                    android:id="@+id/order_summary_layout"
+                    layout="@layout/order_summary"/>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/detail_recycler_view"
+                    android:scrollbars="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
                     android:layout_weight="1"
-                    >
-                    <TextView
-                        android:id="@+id/address"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Address"
-                        android:textSize="@dimen/summary_size"
-                        android:layout_marginTop="16dp"
-                        />
-
-                    <Button
-                        android:id="@+id/navigate_button"
-                        android:layout_height="40dp"
-                        android:layout_width="wrap_content"
-                        android:text="Navigate"
-                        android:layout_marginTop="16dp"
-                        />
-                </LinearLayout>
-
-                <View
-                    android:id="@+id/divider2"
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="8dp"
-                    android:background="@android:color/darker_gray"/>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:orientation="vertical">
-                    <TextView
-                        android:id="@+id/cart_price"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="200.00"
-                        android:textStyle="bold"
-                        android:textColor="@color/style_color_primary"
-                        android:textSize="@dimen/summary_size"
-                        android:layout_marginTop="16dp"
-                        />
-
-                    <TextView
-                        android:id="@+id/delivery_time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="25 Minutes"
-                        android:textColor="@color/style_color_primary"
-                        android:textSize="@dimen/summary_size"
-                        android:layout_marginTop="16dp"
-                        />
-                </LinearLayout>
-
+                    xmlns:android="http://schemas.android.com/apk/res/android" />
             </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/detail_recycler_view"
-                android:scrollbars="vertical"
+                android:id="@+id/checkin_view"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                xmlns:android="http://schemas.android.com/apk/res/android" />
+                android:layout_height="50dp"
+                android:scrollbars="vertical"
+                android:visibility="visible"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"/>
 
             <LinearLayout
                 android:id="@+id/cardcash_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                >
+                android:visibility="visible"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true">
                 <Button
                     android:id="@+id/card_payment_button"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
+                    android:layout_marginRight="4dp"
                     android:text="Card"
                     android:textColor="@color/white"
                     android:layout_weight="1"
@@ -151,6 +69,7 @@
                     android:id="@+id/cash_payment_button"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
+                    android:layout_marginLeft="4dp"
                     android:layout_alignParentRight="true"
                     android:text="Cash"
                     android:textColor="@color/white"
@@ -170,6 +89,7 @@
                     android:clickable="false"
                     />
             </LinearLayout>
-        </LinearLayout>
+        </RelativeLayout>
+
     </ScrollView>
  </LinearLayout>
