--- a/app/src/main/res/layout/order_summary.xml
+++ b/app/src/main/res/layout/order_summary.xml
@@ -1,175 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/order_summary_layout"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_marginRight="8dp"
-              android:layout_marginLeft="8dp"
-              android:layout_marginTop="8dp"
-              android:layout_marginBottom="8dp"
-              android:orientation="vertical"
-              android:background="@drawable/card_background"
-              android:weightSum="1">
-
-    <RelativeLayout
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/order_summary_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    >
+    <TextView
+        android:id="@+id/customer_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="8dp"
-        android:paddingTop="8dp"
-        android:paddingRight="8dp">
-        <TextView
-            android:id="@+id/customer_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Naresh Kumar"
-            android:textSize="@dimen/customer_name_size"
-            android:layout_marginLeft="8dp"
-            android:layout_marginBottom="8dp"
-            />
-        <Button
-            android:id="@+id/call_button"
-            android:layout_height="40dp"
-            android:layout_width="wrap_content"
-            android:text="Call"
-            android:layout_marginRight="8dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true"/>
-   </RelativeLayout>
-
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_below="@+id/customer_name"
-        android:layout_height="1dp"
-        android:layout_marginTop="8dp"
-        android:background="@android:color/darker_gray"
-        android:layout_weight="0.14"/>
+        android:text="Naresh Kumar"
+        android:textSize="@dimen/big"
+    />
 
     <TextView
         android:id="@+id/order_id"
-        android:layout_below="@+id/divider"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="#1010101"
-        android:textSize="@dimen/summary_size"
+        android:layout_below="@+id/customer_name"
+        android:layout_alignLeft="@+id/customer_name"
+    />
+
+    <ImageButton
+        android:id="@+id/call_button"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_alignParentRight="true"
+        android:src="@android:drawable/ic_menu_call"
+    />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_below="@+id/order_id"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="8dp"
+        android:background="@android:color/darker_gray"
+    />
+
+    <TextView
+        android:id="@+id/address"
+        android:layout_below="@+id/divider"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:spinnerMode="dialog"
+        android:maxLines="10"
+        android:text="Address"
+        android:textSize="@dimen/normal"
         android:layout_marginTop="16dp"
-        android:layout_marginLeft="8dp"
-        android:clickable="true"
-        />
+    />
+
     <TextView
         android:id="@+id/cart_price"
-        android:layout_alignBaseline="@+id/order_id"
+        android:layout_below="@+id/divider"
         android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="200.00"
         android:textStyle="bold"
         android:textColor="@color/style_color_primary"
-        android:textSize="@dimen/summary_size"
+        android:textSize="@dimen/big"
         android:layout_marginTop="16dp"
-        android:layout_marginRight="8dp"
-        />
-    <TextView
-        android:id="@+id/delivery_time_text"
-        android:layout_below="@+id/order_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Time for delivery"
-        android:textSize="@dimen/summary_size"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="8dp"
-        />
+    />
+
     <TextView
         android:id="@+id/delivery_time"
-        android:layout_below="@+id/order_id"
+        android:layout_below="@+id/cart_price"
         android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="25 Minutes"
         android:textColor="@color/style_color_primary"
-        android:textSize="@dimen/summary_size"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="8dp"
-        />
-    <TextView
-        android:id="@+id/address_heading"
-        android:layout_below="@+id/delivery_time_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Address"
-        android:textSize="@dimen/summary_size"
-        android:textStyle="bold"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
-        />
-    <TextView
-        android:id="@+id/address"
-        android:layout_below="@+id/address_heading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Address"
-        android:textSize="@dimen/summary_size"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
-        />
-
+        android:textSize="@dimen/big"
+    />
 
     <Button
         android:id="@+id/navigate_button"
+        android:layout_below="@id/delivery_time"
         android:layout_height="40dp"
         android:layout_width="wrap_content"
+        android:layout_alignParentRight="true"
         android:text="Navigate"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="8dp" />
+        />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <View
+        android:id="@+id/divider2"
         android:layout_below="@+id/address"
-        >
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        />
+</RelativeLayout>
 
-        <RelativeLayout
-            android:id="@+id/checkin_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="8dp"
-            android:layout_marginTop="16dp">
-            <Button
-                android:id="@+id/checkin_button"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_centerHorizontal="true"
-                android:text="Check In"
-                android:textColor="@color/white"
-                android:layout_marginRight="8dp"
-                android:background="@drawable/button_background"
-                />
-        </RelativeLayout>
-        <RelativeLayout
-            android:id="@+id/done_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:paddingBottom="8dp"
-            android:visibility="gone"
-            >
-
-            <Button
-                android:id="@+id/undo_checkin_button"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_centerHorizontal="true"
-                android:text="Undo"
-                android:textColor="@color/white"
-                android:layout_marginRight="8dp"
-                android:background="@drawable/button_background"
-                />
-
-        </RelativeLayout>
-
-    </RelativeLayout>
-
-</LinearLayout>
