--- a/app/src/main/res/layout/order_summary_list.xml
+++ b/app/src/main/res/layout/order_summary_list.xml
@@ -3,17 +3,17 @@
 <android.support.v4.widget.SwipeRefreshLayout
     android:id="@+id/activity_main_swipe_refresh_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/ViewSwitcher"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="wrap_content">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/order_recycler_view"
             android:scrollbars="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             xmlns:android="http://schemas.android.com/apk/res/android" />
         <TextView
             android:id="@+id/order_list_noorders"
