--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/splash_screen_gradient"
-    tools:context="com.app.twigly.SplashScreenActivity">
+    tools:context="com.app.twiglydb.SplashScreenActivity">
 
 
     <ImageView
