--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="customer_name_size">24sp</dimen>
-    <dimen name="summary_size">18sp</dimen>
+    <dimen name="big">24sp</dimen>
+    <dimen name="normal">18sp</dimen>
 
 </resources>
