--- a/app/src/main/res/menu/ordersummary_actions.xml
+++ b/app/src/main/res/menu/ordersummary_actions.xml
@@ -3,6 +3,10 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- Settings, should always be in the overflow -->
+    <item android:id="@+id/action_summary"
+          android:title="Summary"
+          app:showAsAction="never"/>
+
     <item android:id="@+id/action_exit"
           android:title="Exit"
           app:showAsAction="never"/>
