--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,6 +39,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_mobile"
+                    android:textColor="@color/black_semi_transparent_60"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:singleLine="true" />
