--- a/app/src/main/res/layout/order_summary_list.xml
+++ b/app/src/main/res/layout/order_summary_list.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:layout_marginBottom="16dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     >
     <include
+        android:id="@+id/toolbar"
         layout="@layout/toolbar"
         />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/activity_main_swipe_refresh_layout"
+        android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
@@ -39,5 +42,16 @@
         </ViewSwitcher>
     </android.support.v4.widget.SwipeRefreshLayout>
 
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:elevation="0dp"
+        android:src="@android:drawable/sym_action_call"
+    />
+
+</RelativeLayout>
 
